cluster/k8s/grocy/vallejo/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grocy-vallejo
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: "auto"
